1. 新增了树的直径模板 2. 现在可以决定代码是否需要注释了

--- a/main.tex
+++ b/main.tex
@@ -21,5 +21,6 @@
 \begin{CJK}{UTF8}{gbsn}
 	\tableofcontents 
 	\include{number_theory/number_theory}
+	\include{tree/tree}
 \end{CJK}
 \end{document}
