--- a/global.tex
+++ b/global.tex
@@ -1,10 +1,23 @@
+\newif\ifCodeComment
+\CodeCommenttrue     % 代码保留注释
+% \CodeCommentfalse  % 代码取消注释
+
 % cpp 代码引用
 \newcommand{\Code}[1]{
   \inputminted[
-  linenos,
-  breaklines,
-  fontsize=\small
-]{c++}{#1}
+    linenos,
+    breaklines,
+    fontsize=\small
+  ]{c++}{#1}
+}
+
+% cpp 代码引用（注释&非注释切换版）
+\newcommand{\CodeCommentSwitch}[1]{
+  \ifCodeComment
+    \Code{#1.cpp}
+  \else
+    \Code{#1.nocomment.cpp}
+  \fi
 }
 
 % section 配置，我不想要编号，但是又想进目录，所以这样了
