--- a/number_theory/number_theory.tex
+++ b/number_theory/number_theory.tex
@@ -1,5 +1,14 @@
 \Sec{数论}
 
 \Subsec{素性检测}
-
 \Code{number_theory/primality_test.cpp}
+
+\Subsec{大合数分解}
+\Comment{该板子依赖了【数论】-【素性检测】的板子}
+\CodeCommentSwitch{number_theory/factorize}
+
+\Subsec{二次剩余-膜意义下开方}
+\CodeCommentSwitch{number_theory/sqrt_mod}
+
+\Subsec{Nim积}
+\CodeCommentSwitch{number_theory/nim_product}
