--- a/number_theory/number_theory.tex
+++ b/number_theory/number_theory.tex
@@ -1,7 +1,7 @@
 \Sec{数论}
 
 \Subsec{素性检测}
-\Code{number_theory/primality_test.cpp}
+\CodeCommentSwitch{number_theory/primality_test}
 
 \Subsec{大合数分解}
 \Comment{该板子依赖了【数论】-【素性检测】的板子}
@@ -12,3 +12,4 @@
 
 \Subsec{Nim积}
 \CodeCommentSwitch{number_theory/nim_product}
+
