--- a/main.tex
+++ b/main.tex
@@ -12,6 +12,7 @@
 \setlength{\parskip}{0.7em}
 \title{algorithm template}
 \author{zinan.xu.dev@gmail.com}
+\date{1st Jan., 2026}
 
 \input{global} % 一些全局配置 & newcommand
 
